// Forgot password
"com.auth0.lock.database.button.forgot_password" = "Don’t remember your password?";
// tos & privacy
"com.auth0.lock.database.button.tos" = "By signing up, you agree to our terms of\n service and privacy policy";
// tos title
"com.auth0.lock.database.button.tos.title" = "Terms & Policy";
// forgot password email sent
"com.auth0.lock.database.forgot.success.message" = "We've just sent you an email to reset your password";
// User logged in
"com.auth0.lock.database.login.success.message" = "You have logged in successfully.";
// Login Switch
"com.auth0.lock.database.mode.switcher.login" = "Log In";
// Signup Switch
"com.auth0.lock.database.mode.switcher.signup" = "Sign Up";
// Social separator
"com.auth0.lock.database.separator" = "or";
// User signed up
"com.auth0.lock.database.signup.success.message" = "Thanks for signing up.";
// Accept
"com.auth0.lock.database.tos.sheet.accept" = "Accept";
// Cancel
"com.auth0.lock.database.tos.sheet.cancel" = "Cancel";
// Privacy
"com.auth0.lock.database.tos.sheet.privacy" = "Privacy Policy";
// ToS
"com.auth0.lock.database.tos.sheet.title" = "Terms of Service";
// enter corporate credentials
"com.auth0.lock.enterprise.sso.message" = "Please enter your corporate credentials";
// enter corporate credentials of domain %@{email domain}
"com.auth0.lock.enterprise.sso.message_at" = "Please enter your corporate credentials at %1$@";
// SSO Header
"com.auth0.lock.enterprise.sso.title" = "SINGLE SIGN-ON ENABLED";
// user is blocked
"com.auth0.lock.error.authentication.blocked_user" = "THE USER IS BLOCKED.";
// Generic login error
"com.auth0.lock.error.authentication.fallback" = "WE'RE SORRY, SOMETHING WENT WRONG WHEN ATTEMPTING TO LOG IN.";
// invalid_user_password
"com.auth0.lock.error.authentication.invalid_user_password" = "WRONG EMAIL OR PASSWORD.";
// a0.mfa_invalid_code
"com.auth0.lock.error.authentication.mfa_invalid_code" = "WRONG CODE.";
// No valid connection
"com.auth0.lock.error.authentication.no_connection" = "WE'RE SORRY, WE COULD NOT FIND A VALID CONNECTION FOR THIS USER.";
// password_change_required
"com.auth0.lock.error.authentication.password_change_required" = "YOU NEED TO UPDATE YOUR PASSWORD BECAUSE THIS IS THE FIRST TIME YOU ARE LOGGING IN, OR BECAUSE YOUR PASSWORD HAS EXPIRED.";
// password_leaked
"com.auth0.lock.error.authentication.password_leaked" = "THIS LOGIN HAS BEEN BLOCKED BECAUSE YOUR PASSWORD HAS BEEN LEAKED IN ANOTHER WEBSITE. WE’VE SENT YOU AN EMAIL WITH INSTRUCTIONS ON HOW TO UNBLOCK IT.";
// too_many_attempts
"com.auth0.lock.error.authentication.too_many_attempts" = "YOUR ACCOUNT HAS BEEN BLOCKED AFTER MULTIPLE CONSECUTIVE LOGIN ATTEMPTS.";
// Generic error
"com.auth0.lock.error.fallback" = "SOMETHING WENT WRONG.\nPLEASE CONTACT TECHNICAL SUPPORT.";
// Generic password error
"com.auth0.lock.error.forgot.fallback" = "WE'RE SORRY, SOMETHING WENT WRONG WHEN REQUESTING THE PASSWORD CHANGE.";
// At least N characters
"com.auth0.lock.error.password.at_least_length" = "At least %d characters in length";
// At least n groups
"com.auth0.lock.error.password.contain_at_least" = "Contain at least %d of the following %d types of characters:";
// Lowercase letters
"com.auth0.lock.error.password.lowercase_letters" = "Lower case letters (a-z)";
// No more than %@{count} identical characters in a row (e.g., \"%@{identical sample}\" not allowed)
"com.auth0.lock.error.password.no_more_identical" = "No more than %1$d identical characters in a row (e.g., \"%2$@\" not allowed)";
// Must no be empty
"com.auth0.lock.error.password.non_empty" = "Non-empty password required";
// Numbers
"com.auth0.lock.error.password.numbers" = "Numbers (i.e. 0-9)";
// N groups
"com.auth0.lock.error.password.should_contain" = "Should contain:";
// Special Characters
"com.auth0.lock.error.password.special_characters" = "Special characters (e.g. !@#$%^&*)";
// Uppercase letters
"com.auth0.lock.error.password.uppercase_letters" = "Upper case letters (A-Z)";
// Passwordless link invalid.
"com.auth0.lock.error.passwordless.invalid_link" = "WE'RE SORRY, THERE WAS A PROBLEM WITH YOUR LINK. PLEASE REQUEST A NEW ONE.";
// Passwordless sign ups disabled.
"com.auth0.lock.error.passwordless.signup_disabled" = "NEW SIGN UPS ARE DISABLED FOR THIS ACCOUNT, PLEASE CONTACT YOUR ADMINISTRATOR.";
// Recoverable error button
"com.auth0.lock.error.recoverable.button" = "Retry";
// Recoverable error message
"com.auth0.lock.error.recoverable.message" = "Please check your internet connection.";
// Recoverable error title
"com.auth0.lock.error.recoverable.title" = "Can't load the login box";
// Generic sign up error
"com.auth0.lock.error.signup.fallback" = "WE'RE SORRY, SOMETHING WENT WRONG WHEN ATTEMPTING TO SIGN UP.";
// invalid_password
"com.auth0.lock.error.signup.invalid_password" = "PASSWORD IS INVALID.";
// password_dictionary_error
"com.auth0.lock.error.signup.password_dictionary_error" = "PASSWORD IS TOO COMMON.";
// password_history
"com.auth0.lock.error.signup.password_history" = "PASSWORD HAS PREVIOUSLY BEEN USED.";
// password_no_user_info_error
"com.auth0.lock.error.signup.password_no_user_info_error" = "PASSWORD IS BASED ON USER INFORMATION.";
// password_strength_error
"com.auth0.lock.error.signup.password_strength_error" = "PASSWORD IS TOO WEAK.";
// user_exists
"com.auth0.lock.error.signup.user_exists" = "THE USER ALREADY EXISTS.";
// Unrecoverable error button
"com.auth0.lock.error.unrecoverable.button" = "Contact support";
// Default error
"com.auth0.lock.error.unrecoverable.default" = "Something went wrong.\nPlease contact technical support.";
// Invalid client or domain
"com.auth0.lock.error.unrecoverable.invalid_credentials" = "Your Auth0 credentials ClientId and/or Domain are invalid.";
// Your options configuration failed with: %@{error}
"com.auth0.lock.error.unrecoverable.invalid_options" = "Your options configuration failed with: %1$@";
// Unrecoverable error message
"com.auth0.lock.error.unrecoverable.message" = "There was an unexpected error while resolving the login box configuration.";
// Unrecoverable error message
"com.auth0.lock.error.unrecoverable.message.no_action" = "There was an unexpected error while resolving the login box configuration, please contact support.";
// No connections
"com.auth0.lock.error.unrecoverable.no_connections" = "No authentication methods found for this client. please check your client setup.";
// Unrecoverable error title
"com.auth0.lock.error.unrecoverable.title" = "Can't resolve your request";
// Forgot Password message
"com.auth0.lock.forgot.message" = "Please enter your email. We will send you an email to confirm the password change.";
// Forgot Password title
"com.auth0.lock.forgot.title" = "Reset Password";
// Header Title
"com.auth0.lock.header.default_title" = "Auth0";
// invalid email
"com.auth0.lock.input.email.error" = "Must be a valid email address";
// Email placeholder
"com.auth0.lock.input.email.placeholder" = "Email";
// Username or Email placeholder
"com.auth0.lock.input.email_username.placeholder" = "Username/Email";
// empty input
"com.auth0.lock.input.empty.error" = "Must not be empty";
// generic input error
"com.auth0.lock.input.generic.error" = "Invalid input";
// invalid otp
"com.auth0.lock.input.otp.error" = "Must be a valid numeric code";
// OTP placeholder
"com.auth0.lock.input.otp.placeholder" = "Code";
// Password placeholder
"com.auth0.lock.input.password.placeholder" = "Password";
// invalid phone
"com.auth0.lock.input.phone.error" = "Must be a valid phone number";
// Phone placeholder
"com.auth0.lock.input.phone.placeholder" = "Phone Number";
// policy violation
"com.auth0.lock.input.policy.error" = "Password does not fulfill policy";
// invalid username
"com.auth0.lock.input.username.error" = "Can only contain between %d to %d alphanumeric characters and \'_\'.";
// Username placeholder
"com.auth0.lock.input.username.placeholder" = "Username";
// Multifactor message
"com.auth0.lock.multifactor.message" = "Please enter the verification code generated by your mobile application.";
// Multifactor title
"com.auth0.lock.multifactor.title" = "Two Step Verification";
// Country tableview navigation header
"com.auth0.lock.passwordless.sms.country.header" = "Select your Country";
// CountryCodes TableView searchbar placeholder
"com.auth0.lock.passwordless.sms.country.search" = "Search";
// Amazon
"com.auth0.lock.strategy.localized.amazon" = "Amazon";
// Aol
"com.auth0.lock.strategy.localized.aol" = "AOL";
// Apple
"com.auth0.lock.strategy.localized.apple" = "Apple";
// Baidu
"com.auth0.lock.strategy.localized.baidu" = "百度";
// Bitbucket
"com.auth0.lock.strategy.localized.bitbucket" = "Bitbucket";
// Dropbox
"com.auth0.lock.strategy.localized.dropbox" = "Dropbox";
// Dwolla
"com.auth0.lock.strategy.localized.dwolla" = "Dwolla";
// Ebay
"com.auth0.lock.strategy.localized.ebay" = "Ebay";
// Evernote
"com.auth0.lock.strategy.localized.evernote" = "Evernote";
// EvernoteSandbox
"com.auth0.lock.strategy.localized.evernote_sandbox" = "Evernote (sandbox)";
// Exact
"com.auth0.lock.strategy.localized.exact" = "Exact";
// Facebook
"com.auth0.lock.strategy.localized.facebook" = "Facebook";
// Fitbit
"com.auth0.lock.strategy.localized.fitbit" = "Fitbit";
// Github
"com.auth0.lock.strategy.localized.github" = "GitHub";
// Google
"com.auth0.lock.strategy.localized.google" = "Google";
// Instagram
"com.auth0.lock.strategy.localized.instagram" = "Instagram";
// Linkedin
"com.auth0.lock.strategy.localized.linkedin" = "LinkedIn";
// Microsoft
"com.auth0.lock.strategy.localized.microsoft" = "Microsoft Account";
// Miicard
"com.auth0.lock.strategy.localized.miicard" = "miiCard";
// Paypal
"com.auth0.lock.strategy.localized.paypal" = "PayPal";
// PaypalSandbox
"com.auth0.lock.strategy.localized.paypal_sandbox" = "PayPal (sandbox)";
// PlanningCenter
"com.auth0.lock.strategy.localized.planning_center" = "Planning Center";
// RenRen
"com.auth0.lock.strategy.localized.renren" = "人人";
// Salesforce
"com.auth0.lock.strategy.localized.salesforce" = "Salesforce";
// SalesforceCommunity
"com.auth0.lock.strategy.localized.salesforce_community" = "Salesforce Community";
// SalesforceSandbox
"com.auth0.lock.strategy.localized.salesforce_sandbox" = "Salesforce (sandbox)";
// Shopify
"com.auth0.lock.strategy.localized.shopify" = "Shopify";
// Soundcloud
"com.auth0.lock.strategy.localized.soundcloud" = "SoundCloud";
// TheCity
"com.auth0.lock.strategy.localized.the_city" = "The City";
// TheCitySandbox
"com.auth0.lock.strategy.localized.the_city_sandbox" = "The City (sandbox)";
// ThirtySevenSignals
"com.auth0.lock.strategy.localized.thirty_seven_signals" = "Basecamp";
// Twitter
"com.auth0.lock.strategy.localized.twitter" = "Twitter";
// Vkontakte
"com.auth0.lock.strategy.localized.vkontakte" = "VKontakte";
// Weibo
"com.auth0.lock.strategy.localized.weibo" = "新浪微博";
// Wordpress
"com.auth0.lock.strategy.localized.wordpress" = "WordPress";
// Yahoo
"com.auth0.lock.strategy.localized.yahoo" = "Yahoo!";
// Yammer
"com.auth0.lock.strategy.localized.yammer" = "Yammer";
// Yandex
"com.auth0.lock.strategy.localized.yandex" = "Yandex";
// Log in with %@{strategy}
"com.auth0.lock.strategy.login.title" = "Sign in with %1$@";
// Sign up with %@{strategy}
"com.auth0.lock.strategy.signup.title" = "Sign up with %1$@";
// Login Button title
"com.auth0.lock.submit.login.title" = "LOG IN";
// Send 2fa code
"com.auth0.lock.submit.send_code.title" = "SEND";
// Send Email button title
"com.auth0.lock.submit.send_email.title" = "SEND EMAIL";
// Signup Button title
"com.auth0.lock.submit.signup.title" = "SIGN UP";
// Passwordless code reminder action
"com.auth0.passwordless.code.reminder" = "Did not get the code?";
// Passwordless code sent by email to %@{identifier}
"com.auth0.passwordless.email.code.sent" = "An email with the code has been sent to %1$@";
// Passwordless email title
"com.auth0.passwordless.email.title" = "Enter your email to sign in or create an account.";
// Passwordless email title with social
"com.auth0.passwordless.email.title.social" = "Otherwise, enter your email to sign in or create an account.";
// Passwordless link reminder action
"com.auth0.passwordless.link.reminder" = "Did not receive the link?";
// Passwordless input link code manually action
"com.auth0.passwordless.link.code" = "I have a code";
// Passwordless link sent to %@{identifier}
"com.auth0.passwordless.link.sent" = "We sent you a link to sign in to %1$@";
// Passwordless code sent by sms to %@{identifier}
"com.auth0.passwordless.sms.code.sent" = "An sms with the code has been sent to %1$@";
// CountryCodes TableViewCell detail %@{phoneCode}
"com.auth0.passwordless.sms.country.cell.detail" = "%1$@";
// CountryCodes TableViewCell label %@{localizedName}
"com.auth0.passwordless.sms.country.cell.label" = "%1$@";
// Passwordless sms title
"com.auth0.passwordless.sms.title" = "Enter your phone to sign in or create an account.";
// Passwordless sms title with social
"com.auth0.passwordless.sms.title.social" = "Otherwise, enter your phone to sign in or create an account.";
